force-app/main/default/objects/Account/fields/CSM_Strategic_Notes__c.field-meta.xml
<CustomField>
    <fullName>CSM_Strategic_Notes__c</fullName>
    <description>CSM working notes capturing the stabilization plan, intervention history, and next steps for at-risk Accounts.</description>
    <inlineHelpText>CSM working notes: stabilization plan, intervention history, and next steps.</inlineHelpText>
    <label>Strategic Notes / Intervention Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>