force-app/main/default/objects/Account/fields/Dedicated_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User designated as the dedicated account manager for this VIP client. Required whenever VIP_Tier__c is Gold or Platinum (enforced by VIP_Tier_Requires_Account_Manager validation rule).</description>
    <inlineHelpText>Named account manager responsible for this VIP client. Required for Gold and Platinum tiers.</inlineHelpText>
    <label>Dedicated Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>VIP Accounts (Dedicated Manager)</relationshipLabel>
    <relationshipName>VIP_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>