force-app/main/default/objects/Account/fields/Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Health_Status__c</fullName>
    <description>Overall Customer Success assessment of this Account's relationship health. Controls which values are available on Primary_Risk_Reason__c.</description>
    <inlineHelpText>Overall Customer Success assessment of this account's relationship health. Drives the available Primary Risk Reason values.</inlineHelpText>
    <label>Health Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Critical - Churn Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>