force-app/main/default/objects/Account/fields/Last_Health_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Health_Assessment_Date__c</fullName>
    <description>Date the most recent Customer Success health assessment was performed on this Account.</description>
    <inlineHelpText>Date the most recent Customer Success health assessment was performed.</inlineHelpText>
    <label>Last Health Assessment Date</label>
    <type>Date</type>
</CustomField>