force-app/main/default/objects/Account/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact on this Account currently designated as the primary point of contact. Kept in sync automatically by ContactTrigger/ContactPrimaryContactService whenever a Contact&apos;s Is_Primary__c flag changes.</description>
    <inlineHelpText>Automatically maintained. Reflects the Contact most recently marked Is Primary on this Account.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Primary Contact)</relationshipLabel>
    <relationshipName>Primary_Contact_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>