force-app/main/default/objects/Account/fields/Primary_Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Risk_Reason__c</fullName>
    <description>Primary driver of attrition risk for this Account. Dependent on Health_Status__c — only available when Health Status is At Risk or Critical - Churn Risk.</description>
    <inlineHelpText>Primary driver of attrition risk. Only relevant when Health Status is At Risk or Critical.</inlineHelpText>
    <label>Primary Risk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Health_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Product Adoption</fullName>
            </value>
            <value>
                <fullName>Pricing/Budget Constraints</fullName>
            </value>
            <value>
                <fullName>Competitor Pressure</fullName>
            </value>
            <value>
                <fullName>Support Issues</fullName>
            </value>
            <value>
                <fullName>Loss of Executive Sponsor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>