force-app/main/default/objects/Account/fields/Special_Handling_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Handling_Notes__c</fullName>
    <description>Free-text notes capturing special handling requirements for VIP clients, such as SLA commitments and executive contacts.</description>
    <inlineHelpText>Document any SLAs, executive contacts, or special handling requirements for this VIP client.</inlineHelpText>
    <label>Special Handling Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>