force-app/main/default/objects/Account/fields/VIP_Tier__c.field-meta.xml
<CustomField>
    <fullName>VIP_Tier__c</fullName>
    <description>Classifies this Account's VIP status for prioritized handling by Sales, Support, and Account teams. Gold and Platinum tiers require a Dedicated Account Manager to be assigned.</description>
    <inlineHelpText>Select the VIP tier for this account. Gold and Platinum require a Dedicated Account Manager.</inlineHelpText>
    <label>VIP Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>